# rectifill

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: generate.py  train.py
src/config/: config.py
src/data/: alignment.py  datamodule.py  dataset.py  prepare_data.py  utils.py
src/evaluation/: metrics.py  visualize.py
src/model/: __init__.py  aligned_dit.py  base.py  dit.py  ema.py  interpolate.py  lit_rfm.py  modules.py
src/utils/: callbacks.py  helpers.py  rfm.py
