[project]
name = "rectifill"
version = "0.1.0"
description = "RectiFill: Rectified-Flow Speech Inpainting with T5 Guidance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"torch",
	"torchaudio",
	"torchcodec",
	"librosa",
	"scipy",
	"numpy",
	"transformers",
	"loguru>=0.7.3",
	"ruff>=0.15.1",
	"matplotlib>=3.10.8",
]
